--- a/myang.html
+++ b/myang.html
@@ -3,5 +3,6 @@
 <body>
 Hello world!
 Min Yang
+This assignment seems too long, I think this class is going to have lots of assignment like this. But this is my second semester taking Mike's class, and I believe it's going to be fine.
 </body>
 </html>
