--- a/myang.html
+++ b/myang.html
@@ -1,5 +1,5 @@
 <html>
-<head><title> Git Test Page </title></head>
+<head><title> Git Test Page </title><link rel="stylesheet" type="text/css" href="style.css" /></head>
 <body>
 Min Yang
 This assignment seems too long, I think this class is going to have lots of assignment like this. But this is my second semester taking Mike's class, and I believe it's going to be fine.
